# pyval

./: .gitignore  README.md  go  main.py  pyproject.toml  test
src/pyval/: __init__.py  arg_val.py  decorator_input_validation.py  type_check.py
tests/: test_type_check.py
