[project]
name = "pyval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Lawrence de Varga", email = "lawrencedevarga@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
